--- a/form-responses.html
+++ b/form-responses.html
@@ -4,44 +4,63 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form Responses</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.0.15/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: #f4f6f9;
-      padding: 40px;
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 30px;
-    }
     .chart-container {
-      max-width: 800px;
-      margin: 20px auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      max-width: 400px;
+      transition: transform 0.2s;
+    }
+    .chart-container:hover {
+      transform: scale(1.05);
+    }
+    .top-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background: #ffffff;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
     .download-btn {
-      display: block;
-      margin: 30px auto;
-      padding: 10px 20px;
-      background-color: #007bff;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      padding: 8px 16px;
+      background-color: #4CAF50; /* Excel green */
       color: white;
       border: none;
       border-radius: 6px;
       cursor: pointer;
+      transition: background-color 0.3s;
     }
     .download-btn:hover {
-      background-color: #0056b3;
+      background-color: #367C39;
+    }
+    .charts-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 16px;
+      justify-content: center;
+      padding: 20px;
     }
   </style>
 </head>
-<body>
-  <h2 id="formTitle">Loading responses...</h2>
-  <div id="charts"></div>
-  <button class="download-btn" onclick="downloadCSV()">Download CSV</button>
+<body class="bg-gray-50 font-sans leading-normal tracking-normal">
+  <div class="top-bar">
+    <h1 class="text-xl font-semibold text-gray-800">Form Responses</h1>
+    <button class="download-btn" onclick="downloadCSV()">
+      <i class="fas fa-file-excel"></i>
+      Download CSV
+    </button>
+  </div>
+  <div class="container mx-auto px-4 py-6">
+    <h2 id="formTitle" class="text-center text-3xl font-semibold my-12 text-gray-800">Loading responses...</h2>
+    <div id="charts" class="charts-wrapper">
+      <!-- Charts will dynamically insert here -->
+    </div>
+  </div>
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
@@ -58,7 +77,7 @@
 
       fieldData.forEach((field, index) => {
         const chartWrapper = document.createElement('div');
-        chartWrapper.className = 'chart-container';
+        chartWrapper.className = 'chart-container p-4 bg-white rounded-lg shadow-md m-2';
 
         const canvas = document.createElement('canvas');
         canvas.id = 'chart_' + index;
@@ -70,12 +89,10 @@
           responseCounts[val] = (responseCounts[val] || 0) + 1;
         });
 
-        // Determine chart type based on field type and number of unique values
-        let chartType = 'bar';
-        const uniqueCount = Object.keys(responseCounts).length;
-        if (field.type === 'radio' || uniqueCount <= 5) {
+        let chartType = 'bar'; // Default to bar
+        if (field.type === 'radio' || Object.keys(responseCounts).length <= 5) {
           chartType = 'doughnut';
-        } else if (uniqueCount > 10) {
+        } else if (field.type === 'text' && Object.keys(responseCounts).length > 10) {
           chartType = 'line';
         }
 
@@ -89,35 +106,41 @@
               backgroundColor: [
                 '#FF6384', '#36A2EB', '#FFCE56', '#4BC0C0', '#9966FF',
                 '#FF9F40', '#8E44AD', '#2ECC71', '#F1C40F', '#E74C3C'
-              ].slice(0, uniqueCount),
+              ],
               borderWidth: 1
             }]
           },
           options: {
             responsive: true,
+            maintainAspectRatio: false,
             plugins: {
               legend: {
-                position: chartType === 'bar' ? 'top' : 'right',
+                position: 'right',
               },
               title: {
                 display: true,
                 text: field.label
               }
             },
-            scales: chartType === 'bar' || chartType === 'line' ? {
+            scales: {
               y: {
                 beginAtZero: true
               }
-            } : {}
+            }
           }
         });
       });
     }
 
+    document.querySelector('.download-btn').addEventListener('click', downloadCSV);
+
     function downloadCSV() {
       const forms = JSON.parse(localStorage.getItem('forms') || '[]');
       const form = forms.find(f => f.id === formId);
-      if (!form || !form.responses || form.responses.length === 0) return alert('No responses to download.');
+      if (!form || !form.responses || form.responses.length === 0) {
+        alert('No responses to download.');
+        return;
+      }
 
       const header = form.fields.map(f => f.label);
       const rows = form.responses.map(r => r.map(a => `"${a.value}"`).join(","));
@@ -142,6 +165,8 @@
         formTitle.textContent = 'No responses found or form not found.';
       }
     };
+
+    
   </script>
 </body>
 </html>
